# Net-STM32-303-Sleep

./: .gitignore  READ.md
doc/ТЗ/: STM32F303CBT6.ioc
sources/: CMakeLists.txt  STM32-303-Sleep.uvmpw  STM32-303-Sleep.uvmpw.uvgui.Sasha  STM32-303.uvmpw
sources/Sleep/: CMakeLists.txt  Sleep.uvguix.Sasha  Sleep.uvoptx  Sleep.uvprojx
sources/Sleep/src/: Device.cpp  defines.h  description.txt  main.c  main.cpp  main.h  opt.h  stm32f3xx_hal_conf.h  stm32f3xx_hal_msp.c  stm32f3xx_it.c
sources/Sleep/src/Display/: Colors.cpp  Colors.h  Display.cpp  Display.h  StartScreen.cpp  StartScreen.h  Zones.cpp  Zones.h
sources/Sleep/src/Display/Font/: Font.cpp  Font.h  font12_10.inc  font8.inc
sources/Sleep/src/Hardware/: Beeper.cpp  Beeper.h  EnergySwitch.cpp  EnergySwitch.h  InterCom.cpp  InterCom.h  Keyboard.cpp  Keyboard.h  Timer.cpp  Timer.h
sources/Sleep/src/Hardware/CMSIS/: startup_stm32f303xc.s
sources/Sleep/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC.cpp  HAL_CONF.h  HAL_I2C.cpp  HAL_IT.cpp  HAL_IWDG.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_ROM.cpp  HAL_RTC.cpp  HAL_SLEEP.cpp  HAL_SPI1.cpp  HAL_USART1.cpp
sources/Sleep/src/Hardware/HAL/I2C/: sw_i2c.cpp  sw_i2c.h  sw_i2c_port_stm32.cpp
sources/Sleep/src/Menu/: Menu.cpp  Menu.h  MenuItems.cpp  MenuItems.h  MenuItemsDefs.h
sources/Sleep/src/Menu/Pages/: PageDataBase.cpp  PageDataBaseSettings.cpp  PageDisplay.cpp  PageHC12.cpp  PageMeasures.cpp  PageSystem.cpp  Pages.cpp  Pages.h
sources/Sleep/src/Modules/BH1750/: BH1750.cpp  BH1750.h
sources/Sleep/src/Modules/BME280/: BME280.cpp  BME280.h  bme280_defs.h  bme280_driver.c
sources/Sleep/src/Modules/HC12/: HC12.cpp  HC12.h
sources/Sleep/src/Modules/HI50/: HI50.cpp  HI50.h
sources/Sleep/src/Modules/L00256L/: L00256L.cpp  L00256L.h
sources/Sleep/src/Modules/ST7735/: ST7735.cpp  ST7735.h
sources/Sleep/src/SCPI/: SCPI.cpp  SCPI.h
sources/Sleep/src/Settings/: Settings.cpp  Settings.h
sources/Sleep/src/Storage/: Measures.cpp  Measures.h
sources/Sleep/src/Utils/: Buffer.h  Debug.cpp  Debug.h  Math.cpp  Math.h  RingBuffer.h  Values.cpp  Values.h
sources/Sleep/src/Utils/Text/: String.cpp  String.h  Text.cpp
sources/Sleep/src/_Archiv/: HAL_USART1.cpp  HAL_USART2.cpp  MemoryStorage.cpp  MemoryStorage.h  Storage.cpp  Storage.h
sources/Sleep/src/_Archiv/CDC/: CDC.cpp  CDC.h  usbd_conf.c  usbd_desc.c
sources/Sleep/src/_Archiv/CG-Anem/: CG-Anem.cpp  CG-Anem.h
sources/Sleep/src/_Archiv/GY511/: GY511.cpp  GY511.h
sources/Sleep/src/_Archiv/NEO-M8N/: NEO-M8N.cpp  NEO-M8N.h
sources/Sleep/src/_Archiv/Tests/: Tests.cpp  Tests.h
sources/Sleep/src/_Archiv/W25Q80DV/: W25Q80DV.cpp  W25Q80DV.h
sources/common/STM32Cube_F3/Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f303xc.h  stm32f3xx.h
sources/common/STM32Cube_F3/Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal.h  stm32f3xx_hal_rtc.h
sources/common/STM32Cube_F3/Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal.c  stm32f3xx_hal_cortex.c  stm32f3xx_hal_dma.c  stm32f3xx_hal_flash.c  stm32f3xx_hal_flash_ex.c  stm32f3xx_hal_gpio.c  stm32f3xx_hal_i2c.c  stm32f3xx_hal_pcd.c  stm32f3xx_hal_pwr.c  stm32f3xx_hal_rcc.c  stm32f3xx_hal_rcc_ex.c  stm32f3xx_hal_spi.c  stm32f3xx_hal_uart.c  stm32f3xx_ll_usb.c
sources/common/STM32Cube_F3/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
sources/common/STM32Cube_F3/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c  usbd_ioreq.c
sources/common/_VS_KEIL/CMSIS/: core_cm4.h
sources/common/_VS_KEIL/std_includes/: cstdio  cstdlib  ctime  math.h  stdio.h  time.h
sources/common/_VS_LIBS/STM32F1/: stm32f1xx_hal_adc.cpp  stm32f1xx_hal_cortex.cpp  stm32f1xx_hal_flash_ex.cpp  stm32f1xx_hal_gpio.cpp  stm32f1xx_hal_rcc.cpp  stm32f1xx_hal_rtc.cpp  stm32f1xx_hal_rtc_ex.cpp  stm32f1xx_hal_tim.cpp  stm32f1xx_hal_uart.cpp
sources/common/_VS_LIBS/STM32F3/: stm32f3xx_hal_adc.cpp  stm32f3xx_hal_cortex.cpp  stm32f3xx_hal_flash_ex.cpp  stm32f3xx_hal_i2c.cpp  stm32f3xx_hal_pcd.cpp  stm32f3xx_hal_rcc.cpp  stm32f3xx_hal_rtc.cpp  stm32f3xx_hal_rtc_ex.cpp  stm32f3xx_hal_spi.cpp  stm32f3xx_hal_tim.cpp  stm32f3xx_hal_uart.cpp
sources/scripts/: assembly.bat  build.bat
sources/scripts/Keil/: assembly.bat  edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
